Se AGREGA LOGICA DE REPORTE Y CORREO